--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ div(id="results")
 
 script(src="/socket.io/socket.io.js")
 script(type="text/javascript")
-  var socket = io.connect('http://localhost');
+  var socket = io.connect('#{channel}');
   socket.on('results', function (data) {
     console.log(data);
     $('#results').text(data.toString());
