better conform to express conventions

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype 5
 html(lang="en")
   head
-    //title= pageTitle
+    title= pageTitle
+    link(rel='stylesheet', href='/stylesheets/style.css')
     script(type="text/javascript", src="https://www.google.com/jsapi")
     script(type="text/javascript")
       google.load("jquery", "1.4.2");
